1) Added support for GCPs - generified Pin*** --> Placemark*** - introduced PlacemarkDescriptor 2) Changed dimap format to support GCPs
git-svn-id: https://www.brockmann-consult.de/svn/os/beam-4.x/trunk@618 d90d2d48-2b33-0410-a973-e72f85796a02